--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TT Cars</title>
-              <!-- <link rel="stylesheet" href="./styles/main.css"> -->
+               <link rel="stylesheet" href="./styles/main.css"> 
     </head>
 
     <body>
